--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
       <h1 class="h1card">latest Project</h1>
       <div class="card-wrapper">
         <!-- Card 1 -->
-        <div class="card"><img src="img/bizlink1.png" /></div>
+        <div class="card"><a href="views/index.html"><img src="img/bizlink1.png" /></a></div>
         <!-- Card 2 -->
-        <div class="card active"><img src="img/bizlink2.png" /></div>
+        <div class="card active"><a href="views/index.html"><img src="img/bizlink2.png" /></a></div>
         <!-- Card 3 -->
-        <div class="card"><img src="img/front-end-vue.png" /></div>
+        <div class="card"><a href="views/index.html"><img src="img/front-end-vue.png" /></a></div>
         <!-- Card 4 -->
-        <div class="card"><img src="img/laravel.png" /></div>
+        <div class="card"><a href="views/index.html"><img src="img/crud_laundry.png" /></a></div>
       </div>
       <div class="controls">
         <button id="prevBtn">&#8592;</button>
