--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               </div>
             </div>
 
-            <a href="#" class="project-link" aria-label="View VibeNest project">
+            <a href="views/index.html" class="project-link" aria-label="View VibeNest project">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -275,7 +275,7 @@
               </div>
             </div>
 
-            <a href="#" class="project-link" aria-label="View Sampahin project">
+            <a href="views/index.html" class="project-link" aria-label="View Sampahin project">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -305,7 +305,7 @@
             </div>
             <br />
             <a
-              href="#"
+              href="views/index.html"
               class="project-link"
               aria-label="View SkinSense API project"
             >
@@ -318,11 +318,11 @@
         <!-- Project 4 -->
         <div class="project-item" data-aos="fade-up" data-aos-delay="400">
           <div class="project-preview">
-            <img src="img/1.png" alt="bizlink1 Preview" />
+            <img src="img/lpage.jpeg" alt="Landing Page Preview" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Template bizlink</h3>
-            <p class="project-subtitle">Article websites</p>
+            <h3 class="project-title">Landing Page</h3>
+            <p class="project-subtitle">Online Shop Websites</p>
 
             <div class="tech-stack">
               <div class="tech-row">
@@ -337,7 +337,7 @@
               </div>
             </div>
 
-            <a href="#" class="project-link" aria-label="View VibeNest project">
+            <a href="views/index.html" class="project-link" aria-label="View VibeNest project">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
