--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <h1 class="h1card">latest Project</h1>
       <div class="card-wrapper">
         <!-- Card 1 -->
-        <div class="card"><a href="views/index.html"><img src="img/bizlink1.png" /></a></div>
+        <div class="card"><a href="views/index.html"><img src="img/bizlink1 - Copy.png" /></a></div>
         <!-- Card 2 -->
         <div class="card active"><a href="views/index.html"><img src="img/bizlink2.png" /></a></div>
         <!-- Card 3 -->
@@ -229,17 +229,17 @@
             <img src="img/bizlink1.png" alt="bizlink1 Preview" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Template bizlink</h3>
-            <p class="project-subtitle">Article websites</p>
+            <h3 class="project-title">Website Sekolah</h3>
+            <p class="project-subtitle">Web Sekolah</p>
 
             <div class="tech-stack">
               <div class="tech-row">
-                <span class="tech-pill">Laravel</span>
+                <span class="tech-pill">HTML</span>
                 <span class="tech-pill">Tailwind CSS</span>
-                <span class="tech-pill empty"></span>
+                <span class="tech-pill empty">PHP</span>
               </div>
               <div class="tech-row">
-                <span class="tech-pill">PostgreSQL</span>
+                <span class="tech-pill">Mysql</span>
                 <span class="tech-pill empty"></span>
                 <span class="tech-pill empty"></span>
               </div>
@@ -287,18 +287,18 @@
             <img src="img/front-end-vue.png" alt="Bizlink Preview" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">SkinSense</h3>
+            <h3 class="project-title">Landing Page</h3>
             <p class="project-subtitle">
-              Early Detection of Melanoma Cancer API
+              Landing Page Furniture Shop
             </p>
 
             <div class="tech-stack">
               <div class="tech-row">
                 <span class="tech-pill">Vue JS</span>
-                <span class="tech-pill">ExpressJS</span>
+                <span class="tech-pill">Tailwind CSS</span>
               </div>
               <div class="tech-row">
-                <span class="tech-pill">PostgreSQL</span>
+                <span class="tech-pill">Mysql</span>
                 <span class="tech-pill">Github</span>
                 <span class="tech-pill">Vercel</span>
               </div>
@@ -322,16 +322,16 @@
           </div>
           <div class="project-info">
             <h3 class="project-title">Landing Page</h3>
-            <p class="project-subtitle">Online Shop Websites</p>
+            <p class="project-subtitle">Front End Online Shop</p>
 
             <div class="tech-stack">
               <div class="tech-row">
-                <span class="tech-pill">Laravel</span>
+                <span class="tech-pill">HTML</span>
                 <span class="tech-pill">Tailwind CSS</span>
                 <span class="tech-pill empty"></span>
               </div>
               <div class="tech-row">
-                <span class="tech-pill">PostgreSQL</span>
+                <span class="tech-pill">GitHub</span>
                 <span class="tech-pill empty"></span>
                 <span class="tech-pill empty"></span>
               </div>
@@ -407,6 +407,59 @@
         </div>
       </div>
     </section>
+
+    <section class="certificate-showcase">
+      <h1>Sertifikat</h1>
+      <div class="certificate-grid" data-aos="fade-up">
+    
+    <!-- Sertifikat 1 -->
+    <div class="certificate-item" data-aos="fade-up" data-aos-delay="100">
+      <div class="certificate-preview">
+        <img src="img/certificate-1758515336776.jpg" alt="Certificate 1" />
+      </div>
+      <div class="certificate-info">
+        <h3 class="certificate-title">Web Development</h3>
+        <p class="certificate-subtitle">Dicoding Academy</p>
+
+        <a href="img/certificate-1758515336776.jpg"class="project-link" aria-label="View SkinSense API project">
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+      </div>
+    </div>
+
+    <!-- Sertifikat 2 -->
+    <div class="certificate-item" data-aos="fade-up" data-aos-delay="200">
+      <div class="certificate-preview">
+        <img src="img/certificate-1758515368645.jpg" alt="Certificate 2" />
+      </div>
+      <div class="certificate-info">
+        <h3 class="certificate-title">Laravel Framework</h3>
+        <p class="certificate-subtitle">Online Bootcamp</p>
+
+        <a href="img/certificate-1758515368645.jpg"class="project-link" aria-label="View SkinSense API project">
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+      </div>
+    </div>
+
+    <!-- Sertifikat 3 -->
+    <div class="certificate-item" data-aos="fade-up" data-aos-delay="300">
+      <div class="certificate-preview">
+        <img src="img/certificate-1758515379976.jpg" alt="Certificate 3" />
+      </div>
+      <div class="certificate-info">
+        <h3 class="certificate-title">UI/UX Design</h3>
+        <p class="certificate-subtitle">Google UX Course</p>
+
+        <a href="img/certificate-1758515379976.jpg"class="project-link" aria-label="View SkinSense API project">
+              <i class="fas fa-external-link-alt"></i>
+            </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <footer id="footer" class="footer">
       <div class="footer-container">
