--- a/index.html
+++ b/index.html
@@ -263,11 +263,7 @@
             <div class="tech-stack">
               <div class="tech-row">
                 <span class="tech-pill">Laravel Vite</span>
-                <span class="tech-pill empty"></span>
-              </div>
-              <div class="tech-row">
                 <span class="tech-pill">Tailwind CSS</span>
-                <span class="tech-pill empty"></span>
               </div>
               <div class="tech-row">
                 <span class="tech-pill">Cpanel</span>
@@ -318,7 +314,7 @@
         <!-- Project 4 -->
         <div class="project-item" data-aos="fade-up" data-aos-delay="400">
           <div class="project-preview">
-            <img src="img/lpage.jpeg" alt="Landing Page Preview" />
+            <img src="img/landing-page.png" alt="Landing Page Preview" />
           </div>
           <div class="project-info">
             <h3 class="project-title">Landing Page</h3>
@@ -332,12 +328,12 @@
               </div>
               <div class="tech-row">
                 <span class="tech-pill">GitHub</span>
-                <span class="tech-pill empty"></span>
+                <span class="tech-pill">Swiper.JS</span>
                 <span class="tech-pill empty"></span>
               </div>
             </div>
 
-            <a href="views/index.html" class="project-link" aria-label="View VibeNest project">
+            <a href="views/index.html" class="project-link" aria-label="Landing Page project">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -346,28 +342,21 @@
         <!-- Project 5 -->
         <div class="project-item" data-aos="fade-up" data-aos-delay="500">
           <div class="project-preview">
-            <img src="img/2.png" alt="bizlink2 Preview" />
+            <img src="img/UIUX.png" alt="UI/UX Mobile Preview" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Template Bizlink</h3>
-            <p class="project-subtitle">Article Websites</p>
+            <h3 class="project-title">UI/UX Design</h3>
+            <p class="project-subtitle">UI/UX Mobile Design</p>
 
             <div class="tech-stack">
               <div class="tech-row">
-                <span class="tech-pill">Laravel Vite</span>
+                <span class="tech-pill">Figma</span>
                 <span class="tech-pill empty"></span>
-              </div>
-              <div class="tech-row">
-                <span class="tech-pill">Tailwind CSS</span>
-                <span class="tech-pill empty"></span>
-              </div>
-              <div class="tech-row">
-                <span class="tech-pill">Cpanel</span>
                 <span class="tech-pill empty"></span>
               </div>
             </div>
 
-            <a href="#" class="project-link" aria-label="View Sampahin project">
+            <a href="views/index.html" class="project-link" aria-label="View Sampahin project">
               <i class="fas fa-external-link-alt"></i>
             </a>
           </div>
@@ -406,10 +395,13 @@
           </div>
         </div>
       </div>
+      <div class="button-wrapper">
+        <a href="views/index.html" class="btn-gradient">Lihat Lainnya</a>
+      </div>
     </section>
 
     <section class="certificate-showcase">
-      <h1>Sertifikat</h1>
+      <h1>Certificate</h1>
       <div class="certificate-grid" data-aos="fade-up">
     
     <!-- Sertifikat 1 -->
@@ -418,8 +410,8 @@
         <img src="img/certificate-1758515336776.jpg" alt="Certificate 1" />
       </div>
       <div class="certificate-info">
-        <h3 class="certificate-title">Web Development</h3>
-        <p class="certificate-subtitle">Dicoding Academy</p>
+        <h3 class="certificate-title">Vue.js Framework</h3>
+        <p class="certificate-subtitle">Front end Vue.js | Nextskill</p>
 
         <a href="img/certificate-1758515336776.jpg"class="project-link" aria-label="View SkinSense API project">
               <i class="fas fa-external-link-alt"></i>
@@ -433,8 +425,8 @@
         <img src="img/certificate-1758515368645.jpg" alt="Certificate 2" />
       </div>
       <div class="certificate-info">
-        <h3 class="certificate-title">Laravel Framework</h3>
-        <p class="certificate-subtitle">Online Bootcamp</p>
+        <h3 class="certificate-title">Backend ExpressJS</h3>
+        <p class="certificate-subtitle">ExpressJS | Nextskill</p>
 
         <a href="img/certificate-1758515368645.jpg"class="project-link" aria-label="View SkinSense API project">
               <i class="fas fa-external-link-alt"></i>
@@ -449,14 +441,16 @@
       </div>
       <div class="certificate-info">
         <h3 class="certificate-title">UI/UX Design</h3>
-        <p class="certificate-subtitle">Google UX Course</p>
+        <p class="certificate-subtitle">UI/UX Figma | Nextskill </p>
 
         <a href="img/certificate-1758515379976.jpg"class="project-link" aria-label="View SkinSense API project">
               <i class="fas fa-external-link-alt"></i>
             </a>
       </div>
     </div>
-
+  </div>
+  <div class="button-wrapper">
+    <a href="views/index.html" class="btn-gradient">Lihat Lainnya</a>
   </div>
 </section>
 
@@ -483,36 +477,36 @@
           </div>
 
           <div class="footer-contact">
-            <h3>Get In Touch</h3>
-            <p><i class="fas fa-envelope"></i> your.email@example.com</p>
+            <h3>Contact Me</h3>
+            <p><i class="fas fa-envelope"></i> rafif0278@gmail.com</p>
             <div class="social-links">
               <a
-                href="https://github.com/yourusername"
+                href="https://github.com/Rafi-here/"
                 target="_blank"
                 aria-label="GitHub"
               >
                 <i class="fab fa-github"></i>
               </a>
               <a
-                href="https://linkedin.com/in/yourusername"
+                href="https://facebook.com/Rafi"
                 target="_blank"
-                aria-label="LinkedIn"
+                aria-label="facebook"
               >
-                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-facebook"></i>
               </a>
               <a
-                href="https://instagram.com/yourusername"
+                href="https://instagram.com/piwcoders"
                 target="_blank"
                 aria-label="Instagram"
               >
                 <i class="fab fa-instagram"></i>
               </a>
               <a
-                href="https://twitter.com/yourusername"
+                href="https://wa.me/6288220466442"
                 target="_blank"
-                aria-label="Twitter"
+                aria-label="whatsapp"
               >
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-whatsapp"></i>
               </a>
             </div>
           </div>
