--- a/index.html
+++ b/index.html
@@ -365,23 +365,18 @@
         <!-- Project 6 -->
         <div class="project-item" data-aos="fade-up" data-aos-delay="600">
           <div class="project-preview">
-            <img src="img/1.png" alt="Bizlink Preview" />
+            <img src="img/travel.png" alt="Travel Preview" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">SkinSense</h3>
+            <h3 class="project-title">Travel Website</h3>
             <p class="project-subtitle">
-              Early Detection of Melanoma Cancer API
+              Build with Laravel and Bootstrap
             </p>
 
             <div class="tech-stack">
               <div class="tech-row">
-                <span class="tech-pill">Vue JS</span>
-                <span class="tech-pill">ExpressJS</span>
-              </div>
-              <div class="tech-row">
-                <span class="tech-pill">PostgreSQL</span>
-                <span class="tech-pill">Github</span>
-                <span class="tech-pill">Vercel</span>
+                <span class="tech-pill">Bootstrap</span>
+                <span class="tech-pill">Laravel</span>
               </div>
             </div>
             <br />
